--- a/lib/README.mustache
+++ b/lib/README.mustache
@@ -1,27 +1,27 @@
 ![jasmin](https://jamiller.me/static/jasmin-logo.jpg)
-> A Web Components library for building UI on the modern web
+> {{description}}
 
 ## Usage
 
 ```sh
-npm i --save-dev jasmin
+npm i --save-dev {{name}}
 ```
 
 or:
 
 ```sh
-yarn add jasmin
+yarn add {{name}}
 ```
 
 # API (Coming Soon)
 
 ---
 
-Created with ❤ &nbsp;by Jeff Miller – [@jamiller619](https://twitter.com/jamiller619)
+Created with ❤ &nbsp;by {{ author.name }} – [@{{ author.twitter }}](https://twitter.com/{{ author.twitter }})
 
 Distributed under the MIT license. See ``LICENSE`` for more information.
 
-[https:&#x2F;&#x2F;jamiller.me](https:&#x2F;&#x2F;jamiller.me) – [hello@jamiller.me](hello@jamiller.me)
+[{{ author.website }}]({{ author.website }}) – [{{ author.email }}]({{ author.email }})
 
 <!-- Markdown link & img dfn's -->
 [npm-image]: https://img.shields.io/npm/v/blingjs.svg?style=flat-square
